fixed spacing for blogposts

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 @layer base {
+  :root {
+    --radius: 0.5rem;
+  }
 }
 
 @layer utilities {
@@ -12,6 +15,19 @@ body {
   font-family: "Nunito", sans-serif;
   background-color: #f7f7f7;
 }
+
+h4 {
+  font-size: 1.5rem;
+  font-weight: 700;
+  margin-top: 2.5rem;
+}
+
+p {
+  margin-block: 0.5rem;
+  font-size: 1rem;
+  font-weight: 400;
+}
+
 img {
   width: 100%;
   height: auto;
